--- a/experiences.html
+++ b/experiences.html
@@ -235,6 +235,11 @@ document.addEventListener('DOMContentLoaded',()=>{
     }
   };
 
+  // Detect iOS (iPhone/iPad)
+  function isIOS() {
+    return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+  }
+
   closeBtn.addEventListener('click',()=>{
     overlayVid.pause();
     overlayVid.removeAttribute('src');
@@ -255,8 +260,8 @@ document.addEventListener('DOMContentLoaded',()=>{
     overlayText.innerHTML = `<h2 class="text-2xl md:text-3xl font-bold mb-2">${meta.title}</h2>
       <div class="text-base md:text-lg leading-relaxed">${meta.desc}</div>`;
 
-    // Request fullscreen for the overlay (if not already)
-    if (document.fullscreenEnabled && !document.fullscreenElement) {
+    // Only request fullscreen if NOT iOS
+    if (!isIOS() && document.fullscreenEnabled && !document.fullscreenElement) {
       overlay.requestFullscreen().catch(()=>{});
     }
   }
