link to hardware

--- a/experiences.html
+++ b/experiences.html
@@ -52,8 +52,8 @@
   <header class="fixed top-0 inset-x-0 z-50 flex items-center justify-between px-8 py-4 bg-black/80 backdrop-blur-sm">
     <h1 class="text-2xl font-extrabold tracking-tight">Crowdplzr</h1>
     <nav class="hidden md:flex space-x-6 text-sm font-medium">
-      <a href="#" class="hover:text-red-500">Home</a>
-      <a href="#" class="hover:text-red-500">Browse</a>
+      <a href="index.html" class="hover:text-red-500">Home</a>
+      <a href="hardware.html" class="hover:text-red-500">Get The System</a>
       <a href="#" class="hover:text-red-500">My List</a>
     </nav>
     <button class="px-3 py-1.5 bg-red-600 rounded text-sm font-semibold hover:bg-red-700">Sign In</button>
