--- a/hardware.html
+++ b/hardware.html
@@ -17,7 +17,7 @@
     <h1 class="text-2xl font-extrabold tracking-tight">Crowdplzr</h1>
     <nav class="hidden md:flex space-x-6 text-sm font-medium">
       <a href="index.html" class="hover:text-red-500">Home</a>
-      <a href="hardware.html" class="hover:text-red-500 font-semibold text-red-600">Equip My Venue</a>
+      <a href="hardware.html" class="hover:text-red-500 font-semibold text-red-600">Get The System</a>
       <a href="experiences.html" class="hover:text-red-500">Experiences</a>
     </nav>
     <button class="px-3 py-1.5 bg-red-600 rounded text-sm font-semibold hover:bg-red-700">Sign In</button>
@@ -97,7 +97,7 @@
 
   <!-- ────────── FOOTER ────────── -->
   <footer class="py-8 text-center text-xs text-gray-500 bg-black/90">
-    © 2025 Crowdplzr Ltd. All rights reserved.
+    © 2025 Crowdplzr Inc. All rights reserved.
   </footer>
 </body>
 </html>
