--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1 class="text-2xl font-extrabold tracking-tight">Crowdplzr</h1>
     <nav class="hidden md:flex space-x-6 text-sm font-medium">
       <a href="#" class="hover:text-red-500">Home</a>
-      <a href="hardware.html" class="hover:text-red-500">Get the System</a>
+      <a href="#" class="hover:text-red-500">Get the System</a>
       <a href="#" class="hover:text-red-500">My List</a>
     </nav>
     <button class="px-3 py-1.5 bg-red-600 rounded text-sm font-semibold hover:bg-red-700">Sign In</button>
