--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </h1>
 
       <p class="text-lg md:text-xl">
-        Enter your email to get early access and pricing.
+        Enter email to see full website
       </p>
 
       <!-- ------------- EMAIL CAPTURE FORM ---------------- -->
