Draft of event descriptions
Signed-off-by: jmsflms <jmsflms@gmail.com>

--- a/experiences.html
+++ b/experiences.html
@@ -190,13 +190,13 @@ document.addEventListener('DOMContentLoaded',()=>{
   const videoMeta = {
     "assets/eotw.mp4": {
       title: "End of the World",
-      desc: `<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur.</p>
-             <p>Aliquam erat volutpat. Etiam nec velit nec libero pretium pharetra.</p>`
+      desc: `<p>If there was no tomorrow, what would you do tonight?</p>
+             <p>In this festival favorite (Download, Might Hoopla) News bulletins and menacing transmissions from Aliens whip the crowd up into a frenzy as a clock ticks down to The End of the World. Attendees have already submitted 'their last requests' in communications before the event, and DJs play hyped up guilty pleasures for our final moments. Producers supply banners and activities (last wish wall) and the experience prompts unexpectedly wholesome moments (text your mom and tell her you love her). Make sure your bar is fully stocked. </p>`
     },
     "assets/Urgc.mp4": {
       title: "Underground Rebel Gameshow",
-      desc: `<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur.</p>
-             <p>Aliquam erat volutpat. Etiam nec velit nec libero pretium pharetra.</p>`
+      desc: `<p>While DJs hype the crowd, multiple contestants are randomly chosen from the audience to compete in a game on stage. They are under pressure and their faces are broadcast to the room via webcams. It's an adrenaline fuelled night that brings the silliness of WWE to games that are accessible to all.</p>
+             
     },
     "assets/Ttm.mp4": {
       title: "Twisted Time Machine",
@@ -205,13 +205,11 @@ document.addEventListener('DOMContentLoaded',()=>{
     },
     "assets/rb.mp4": {
       title: "Rebel Bingo",
-      desc: `<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur.</p>
-             <p>Aliquam erat volutpat. Etiam nec velit nec libero pretium pharetra.</p>`
+      desc: `<p>This is the most dangerous form of all the bingos, a sure fire format that has been exciting crowds globally since 2008. </p>`
     },
     "assets/CatFace.mp4": {
       title: "Cat Face",
-      desc: `<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur.</p>
-             <p>Aliquam erat volutpat. Etiam nec velit nec libero pretium pharetra.</p>`
+      desc: `<p>What started as an after party became a global phenomenon, no access unless you draw a cat face on your face. </p>`
     },
     "assets/Lycra.mp4": {
       title: "Lycra 80s Party",
@@ -220,18 +218,15 @@ document.addEventListener('DOMContentLoaded',()=>{
     },
     "assets/SNZF.mp4": {
       title: "Snoozefest Pajama Party",
-      desc: `<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur.</p>
-             <p>Aliquam erat volutpat. Etiam nec velit nec libero pretium pharetra.</p>`
+      desc: `<p>Wellness meets wildness in this sensationally soporific evening complete with guided mediations and pillow fighting</p>`
     },
     "assets/hoedown.mp4": {
       title: "Hoedown Showdown",
-      desc: `<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur.</p>
-             <p>Aliquam erat volutpat. Etiam nec velit nec libero pretium pharetra.</p>`
+      desc: `<p>Nothing brings people together like an old fashioned hoe down, except incredible visuals and guided routines raise the stakes - this is the hoe-eist hoedown of all</p>`
     },
     "assets/keynote.mp4": {
       title: "Killer Keynote",
-      desc: `<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur.</p>
-             <p>Aliquam erat volutpat. Etiam nec velit nec libero pretium pharetra.</p>`
+      desc: `<p>A keynote speech isn't a speech anymore, it's a captivating and unique show. Producers design and share their vision in Crowdplzr and can take it to any venue in the world</p>`
     }
   };
 
