--- a/index.html
+++ b/index.html
@@ -224,6 +224,50 @@
       }
     });
   </script>
+<!-- ───── CLIENT LOGO SCROLLER ───── -->
+<div class="bg-black text-white py-8">
+  <div class="text-center text-xl font-semibold mb-4">We've produced shows for</div>
+  <div class="overflow-hidden whitespace-nowrap relative">
+    <div class="animate-scroll inline-block">
+      <img src="logos/acehotel.png" class="h-12 inline-block mx-6" />
+      <img src="logos/amg.png" class="h-12 inline-block mx-6" />
+      <img src="logos/cosmopolitan.png" class="h-12 inline-block mx-6" />
+      <img src="logos/crowdplzr.png" class="h-12 inline-block mx-6" />
+      <img src="logos/dice.png" class="h-12 inline-block mx-6" />
+      <img src="logos/gastonbury.png" class="h-12 inline-block mx-6" />
+      <img src="logos/ibizarocks.png" class="h-12 inline-block mx-6" />
+      <img src="logos/livenation.png" class="h-12 inline-block mx-6" />
+      <img src="logos/o2arena.png" class="h-12 inline-block mx-6" />
+      <img src="logos/ticketmaster.png" class="h-12 inline-block mx-6" />
+      <img src="logos/venetian.png" class="h-12 inline-block mx-6" />
+      <!-- Repeat logos for seamless scroll -->
+      <img src="logos/acehotel.png" class="h-12 inline-block mx-6" />
+      <img src="logos/amg.png" class="h-12 inline-block mx-6" />
+      <img src="logos/cosmopolitan.png" class="h-12 inline-block mx-6" />
+      <img src="logos/crowdplzr.png" class="h-12 inline-block mx-6" />
+      <img src="logos/dice.png" class="h-12 inline-block mx-6" />
+      <img src="logos/gastonbury.png" class="h-12 inline-block mx-6" />
+      <img src="logos/ibizarocks.png" class="h-12 inline-block mx-6" />
+      <img src="logos/livenation.png" class="h-12 inline-block mx-6" />
+      <img src="logos/o2arena.png" class="h-12 inline-block mx-6" />
+      <img src="logos/ticketmaster.png" class="h-12 inline-block mx-6" />
+      <img src="logos/venetian.png" class="h-12 inline-block mx-6" />
+    </div>
+  </div>
+</div>
+
+<!-- Add this to your <head> or inside <style> block -->
+<style>
+  @keyframes scroll {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-50%); }
+  }
+  .animate-scroll {
+    display: inline-block;
+    white-space: nowrap;
+    animation: scroll 60s linear infinite;
+  }
+</style>
 
 </body>
 </html>
