--- a/index.html
+++ b/index.html
@@ -268,6 +268,9 @@
     animation: scroll 30s linear infinite;
   }
 </style>
-
+  <!-- ────────── FOOTER ────────── -->
+  <footer class="py-8 text-center text-xs text-gray-500 bg-black/90">
+    © 2025 Crowdplzr Inc. All rights reserved.
+  </footer>
 </body>
 </html>
